Fix cmd line opts